# stickerbook

./: .gitignore  Cargo.toml  README.MD  com.github.toasterrepair.Stickerbook.json  flake.nix
resources/: com.github.Stickerbook.desktop  com.github.toasterrepair.Stickerbook.desktop
scripts/: build-flatpak.sh
src/: main.rs  main_window.rs  recent_store.rs  sticker_window.rs
