[package]
name = "stickerbook"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk = { version = "0.9", package = "gtk4", features = ["v4_12"] }
libadwaita = { version = "0.7", features = ["v1_5"] }
glib = "0.20"
gdk = { version = "0.9", package = "gdk4" }
gdk-pixbuf = "0.20"
gio = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
